--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,12 +10,19 @@
   align-items: center;
   gap: 18px;
   margin-bottom: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.footer__logo__container svg {
+  transition: 0.3s;
 }
 
 .footer__logo__text {
   font-size: 20px;
   line-height: 34px;
   font-weight: 300;
+  transition: 0.3s;
 }
 
 .footer__logo__text .bold {
@@ -41,6 +48,11 @@
 
 .footer__column__link {
   color: var(--gray);
+  transition: 0.2s;
+}
+
+.footer__column__link:hover {
+  color: black;
 }
 
 .footer__column {
@@ -94,6 +106,19 @@
   border: 3px solid var(--purple);
   border-radius: 89px;
   font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.footer__button:hover {
+  cursor: pointer;
+  color: white;
+  background: var(--purple);
+  border-radius: 17px;
+  box-shadow: 0px 4px 42px rgba(0, 0, 0, 0.2);
+}
+
+.footer__logo__container:hover .footer__logo__text {
+  transform: translateX(3px);
 }
 
 @media screen and (max-width: 1380px) {
