--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,18 +3,24 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 40px 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background: white;
   z-index: 100;
+  padding: 40px 0;
+}
+
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__nav {
   display: flex;
   align-items: center;
-  gap: 30px;
+  gap: 50px;
 }
 
 .header__menu__container {
@@ -22,7 +28,11 @@
 }
 
 .header__menu__container:hover .header__menu {
-  display: flex;
+  width: 208px;
+  height: 248px;
+  opacity: 1;
+  appearance: unset;
+  pointer-events: all;
 }
 
 .header__menu__container::after {
@@ -39,11 +49,13 @@
 
 .header__menu {
   position: absolute;
-  top: 25px;
+  display: flex;
+  top: 20px;
   left: -15px;
-  width: auto;
-  height: auto;
-  display: none;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  appearance: none;
   flex-direction: column;
   font-weight: 500;
   font-size: 0.95rem;
@@ -51,9 +63,24 @@
   padding: 10px 5px 5px;
   background: white;
   border-radius: 8px;
+  transition: 0.25s;
+  pointer-events: none;
+}
+
+.header__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
+
+.header__logo:hover {
+  transform: scale(1.05);
 }
 
 .header__menu__link {
+  position: relative;
+  z-index: 2;
   transition: 0.15s;
   white-space: nowrap;
   cursor: pointer;
@@ -70,6 +97,12 @@
   font-weight: 600;
   color: #575757;
   cursor: pointer;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.header__nav__link:hover {
+  color: black;
 }
 
 .header__button {
@@ -78,6 +111,14 @@
   font-weight: 600;
   border-radius: 89px;
   border: 3px solid #2c2c2c;
+  transition: 0.3s;
+}
+
+.header__button:hover {
+  background: #2c2c2c;
+  color: white;
+  border-radius: 17px;
+  box-shadow: 0px 4px 42px rgba(0, 0, 0, 0.2);
 }
 
 .menu {
@@ -115,6 +156,7 @@
   font-size: 1rem;
   line-height: 110%;
   font-weight: 300;
+  transition: 0.3s;
 }
 
 .menu__logo__text .bold {
@@ -217,6 +259,18 @@
   gap: 15px;
 }
 
+.menu__logo__container svg {
+  transition: 0.3s;
+}
+
+.menu__logo__container:hover svg {
+  transform: scale(1.05);
+}
+
+.menu__logo__container:hover .menu__logo__text {
+  transform: translateX(3px);
+}
+
 .menu__button__container {
   position: fixed;
   display: flex;
@@ -232,11 +286,18 @@
   font-weight: 600;
   border-radius: 89px;
   border: 3px solid white;
+  transition: 0.3s;
+}
+
+.menu__button:hover {
+  background: white;
+  color: var(--gray);
+  border-radius: 12px;
 }
 
 @media screen and (max-width: 700px) {
   .header {
-    padding: 25px;
+    padding: 25px 0;
   }
   .header__nav__link,
   .header__menu__container,
