--- a/src/feature/Home/HomeGrid/HomeGrid.css
+++ b/src/feature/Home/HomeGrid/HomeGrid.css
@@ -14,6 +14,19 @@
   justify-content: flex-start;
   align-items: flex-end;
   padding: 40px 40px;
+  transition: 0.2s;
+}
+
+.homegrid__item:hover {
+  border-radius: 25px;
+}
+
+.homegrid__item:hover .homegrid__item__title {
+  transform: translateX(-10px);
+}
+
+.homegrid__item:hover .homegrid__arrow {
+  transform: translateX(-10px);
 }
 
 .homegrid__arrow {
@@ -22,6 +35,7 @@
   right: 30px;
   width: 80px;
   height: 80px;
+  transition: 0.2s;
 }
 
 .homegrid__item__title {
@@ -31,6 +45,7 @@
   line-height: 120%;
   text-transform: capitalize;
   color: white;
+  transition: 0.2s;
 }
 
 .homegrid__item:nth-child(1) {
