--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -40,7 +40,7 @@ textarea {
 
 html,
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -59,5 +59,4 @@ body {
   padding-top: 130px;
   width: 100vw;
   height: 100vh;
-  overscroll-behavior: contain;
 }
