call button func fixed

--- a/src/components/FixedButton/FixedButton.css
+++ b/src/components/FixedButton/FixedButton.css
@@ -6,7 +6,6 @@
   box-shadow: 0px 0px 41px rgba(0, 0, 0, 0.53);
   position: fixed;
   left: 50%;
-  transform: translateX(-50%);
   bottom: 30px;
   display: flex;
   opacity: 0;
@@ -15,12 +14,12 @@
   justify-content: center;
   align-items: center;
   transition: 0.2s;
-  transform: translateY(10px);
+  transform: translateX(-50%) translateY(10px);
 }
 
 .visible {
   opacity: 1;
   appearance: unset;
   pointer-events: all;
-  transform: translateY(0);
+  transform: translateX(-50%) translateY(0);
 }
