--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -63,7 +63,7 @@
   padding: 10px 5px 5px;
   background: white;
   border-radius: 8px;
-  transition: 0.25s;
+  /* transition: 0.25s; */
   pointer-events: none;
 }
 
@@ -81,7 +81,7 @@
 .header__menu__link {
   position: relative;
   z-index: 2;
-  transition: 0.15s;
+  /* transition: 0.15s; */
   white-space: nowrap;
   cursor: pointer;
   border-radius: 5px;
@@ -98,7 +98,7 @@
   color: #575757;
   cursor: pointer;
   cursor: pointer;
-  transition: 0.2s;
+  /* transition: 0.2s; */
 }
 
 .header__nav__link:hover {
@@ -111,7 +111,7 @@
   font-weight: 600;
   border-radius: 89px;
   border: 3px solid #2c2c2c;
-  transition: 0.3s;
+  /* transition: 0.3s; */
 }
 
 .header__button:hover {
@@ -286,7 +286,7 @@
   font-weight: 600;
   border-radius: 89px;
   border: 3px solid white;
-  transition: 0.3s;
+  /* transition: 0.3s; */
 }
 
 .menu__button:hover {
